<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--  titulo de activities de menu -->
    <string name="app_name">ECGGEO</string>

    <!--  texto de TextView -->
    <string name="novinculados">No se encontraron dispositivos vinculados</string>
    <string name="noencontrados">No se encontraron dispositivos</string>
    <string name="velocidad">Velocidad: 50%</string>

    <!-- textos textview -->
    <string name="beats">BPM: - - \nConectar Electrodos</string>
    <string name="Paciente">Andrade Bacilio Orlando Alonzo\n25 años</string>

    <!-- textos BT -->
    <string name="bt_DC">Desconectado</string>
    <string name="bt_CT">Conectado</string>
    <string name="bt_CTING">Conectando</string>
    <string name="bt_read"> Desconocida</string>
    <string name="bt_consola">Sin conexión</string>

    <!-- texto de botones -->
    <string name="buscar">Buscar Dispositivos</string>

    <!-- textos DeviceList-->
    <string name="dialog_vinculados">Dispositivos Vinculados</string>
    <string name="dialog_encontados">Dispositivos Encontrados</string>

    <!-- textos Menu-->
    <string name="conectar">Conectar</string>
    <string name="visible">Hacer Visible</string>
    <string name="datos">Editar Datos Paciente</string>
    <string name="demo">Demo</string>
    <string name="info">Acerca de</string>
    <string name="config">Configuracion de monitor</string>

    <!-- textos PopUp -->
    <string name="pop_ingresa">Ingresar datos paciente</string>
    <string name="pop_titulo">UPIBI - IPN</string>
    <string name="pop_config">Configurar monitor</string>
    <string name="pop_nombre">Nombre:</string>
    <string name="pop_hint_nombre">Paciente</string>
    <string name="pop_edad">Edad:</string>
    <string name="pop_hint_edad">Años</string>
    <string name="pop_boton_actualizar">Actualizar</string>
    <string name="pop_boton_cancelar">Cancelar</string>
    <string name="pop_paso">Paso:</string>
    <string name="pop_hint_paso">(1 a 3)</string>
    <string name="pop_amplitud">Umbral QRS:</string>
    <string name="pop_hint_amplitud">(0 a 240)</string>
    <string name="pop_amplificacion">Gain x 1</string>
    <string name="pop_derivacion">Derivación:</string>
    <string name="pop_invertir">Invertir: </string>
    <string name="pop_autoset">Autoset: </string>
    <string name="pop_boton_aceptar">Aceptar</string>
    <string name="pop_mensaje">Bioinstrumentación I\n Interfaz para electrocardiógrafo\n\nAndrade, Piñones y Valle\n2016 - V2.6.5</string>

</resources>
