<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_gravity="center|top"
    android:layout_margin="10dp"
    >

    <!--Titulo-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <TextView
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/pop_ingresa"
            style="@style/titulo"
            android:id="@+id/titulo"
            />

        <!--Linea-->
        <TextView
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight=".05"
            android:background="@color/letra_pipboy"
            android:id="@+id/linea"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="2"
        >

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pop_nombre"
            style="@style/letramediana"
            android:layout_gravity="center"
            android:gravity="left"
            android:id="@+id/tag_nombre"
            />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:maxLength="35"
            android:inputType="textCapWords"
            android:ems="10"
            android:textColorHint="@color/GREEN_HINT"
            android:hint="@string/pop_hint_nombre"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/paciente_nombre" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="2"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pop_edad"
            style="@style/letramediana"
            android:layout_gravity="center"
            android:gravity="left"
            android:id="@+id/tag_edad"
            />
        <EditText
            android:layout_width="0dp"
            android:textColorHint="@color/GREEN_HINT"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:inputType="numberDecimal"
            android:ems="10"
            android:hint="@string/pop_hint_edad"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/paciente_edad" />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="0.5"
        android:id="@+id/botones">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/pop_boton_actualizar"
            style="@style/textoBoton"
            android:layout_marginRight="2dp"
            android:id="@+id/b_actualizar" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/pop_boton_cancelar"
            style="@style/textoBoton"
            android:layout_marginLeft="2dp"
            android:id="@+id/b_cancelar" />
    </LinearLayout>

</LinearLayout>
